[build-system]
requires = ["setuptools", "wheel", "numpy", "cython>=0.29.32"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.cibuildwheel]
build = "cp3{7,8,9,10}-*"
skip = "*-musllinux*"
test-requires = [
    "pytest",
    "cython>=0.29.32",
]
test-command = [
    "python {project}/build_tests.py",
    "py.test {project}/tests/ --ignore {project}/tests/test_sender.py",
]
test-skip = "cp37-*"

[tool.cibuildwheel.linux]
before-all = "yum install -y avahi-libs"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add avahi-libs"
