[build-system]
requires = ["setuptools", "wheel", "numpy", "cython>=0.29.32"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.cibuildwheel]
build = "cp3{7,8,9,10,11}-*"
skip = "*-musllinux*"
test-requires = [
    "pytest",
    "psutil",
    "cython>=0.29.32",
]
test-command = [
    "python {project}/build_tests.py",
    "py.test {project}/tests/",
]
test-skip = "cp38-macosx*"
environment = {CI= "true", CYNDILIB_BUILD_PARALLEL= "auto"}

[tool.cibuildwheel.linux]
before-all = "yum install -y avahi-libs"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add avahi-libs"

[[tool.cibuildwheel.overrides]]
select = "cp38-macosx*"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "11.2"
