[bdist_wheel]
universal = False

[metadata]
name = cyndilib
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com

[options]
zip_safe = False
setup_requires =
    Cython>=0.29.6
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
exclude = tests

[options.package_data]
cyndilib.wrapper =
    *.pxd
    *.pyx
    *.c
    *.cpp

[tool:pytest]
testpaths = tests
