[bdist_wheel]
universal = False

[metadata]
name = cyndilib
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
project_urls =
    Homepage = https://github.com/nocarryr/cyndilib
    Documentation = https://cyndilib.readthedocs.io
    Download = https://pypi.org/project/cyndilib
    Source = https://github.com/nocarryr/cyndilib
    Tracker = https://github.com/nocarryr/cyndilib/issues
description = Python wrapper for NDI® written in Cython
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files =
  LICENSE

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
setup_requires =
    Cython>=0.29.6
    numpy
install_requires =
    numpy
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
exclude = tests


[tool:pytest]
testpaths = tests
